--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -43,9 +43,9 @@
       </li>
     <% }); %>
   </script>
-  <script src="../lib/jquery-3.2.1.min.js"></script>
-  <script src="../lib/underscore-min.js"></script>
-  <script src="../lib/moment-with-locales.min.js"></script>
+  <script src="../vendors/jquery-3.2.1.min.js"></script>
+  <script src="../vendors/underscore-min.js"></script>
+  <script src="../vendors/moment-with-locales.min.js"></script>
   <script src="../js/popup.js"></script>
 </body>
 
