--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="stylesheet" href="../css/material-icons.css">
-  <link rel="stylesheet" href="../css/popup.css">
+  <link rel="stylesheet" href="../css/material-icons.min.css">
+  <link rel="stylesheet" href="../css/popup.min.css">
 </head>
 
 <body>
   <div class="maimodorun-popup">
     <div class="recovery-data">
       <div class="recovery-data-header">
-        <sapn class="recovery-data-header-title">保存された復元可能なデータ</span>
+        <span class="recovery-data-header-title">保存された復元可能なデータ</span>
       </div>
       <div class="recovery-data-body">
         <ul class="popup-ul recovery-data-body-ul">
@@ -46,7 +46,7 @@
   <script src="../vendors/jquery-3.2.1.min.js"></script>
   <script src="../vendors/underscore-min.js"></script>
   <script src="../vendors/moment-with-locales.min.js"></script>
-  <script src="../js/popup.js"></script>
+  <script src="../js/popup.min.js"></script>
 </body>
 
 </html>
